trunk/yanl/examples/t1/fail/parametri_functie.yanl
# Parametrii unei functii nu au voie sa aiba nume identice cu variabilele ei

program dude;

function f(t:integer):boolean
var t:integer;
begin
 f:=true;
end;

begin
end.